# retrieval-augment-generation

./: README.md  docker-compose.batch.yml  docker-compose.yml
generator-api/: Dockerfile  README.md  pyproject.toml
generator-api/api/: main.py  service.py
indexer-batch/: Dockerfile  README.md  pyproject.toml
indexer-batch/batch/: builder.py  loader.py  main.py
indexer-batch/data/: data.txt  index.json
rag-api/: Dockerfile  README.md  pyproject.toml
rag-api/api/: builder.py  main.py  service.py
rag-api/api/schema/: request.py  response.py
retriever-api/: Dockerfile  README.md  pyproject.toml
retriever-api/api/: builder.py  main.py  postprocesser.py  service.py
retriever-api/api/schema/: response.py
sample-rag-application/: build.gradle.kts  settings.gradle.kts
sample-rag-application/src/main/kotlin/com/wararaki/sampleragapplication/: RAGConfiguration.kt  SampleRagApplication.kt
sample-rag-application/src/main/kotlin/com/wararaki/sampleragapplication/model/: Passage.kt
sample-rag-application/src/main/kotlin/com/wararaki/sampleragapplication/repository/: RAGRepository.kt
sample-rag-application/src/main/kotlin/com/wararaki/sampleragapplication/service/: RAGService.kt
sample-rag-application/src/test/kotlin/com/wararaki/sampleragapplication/: SampleRagApplicationTests.kt
